figue/tests/integration/snapshots/main__integration__subcommand_errors__subcommand_positional_looks_like_flag.snap
---
source: crates/figue/tests/integration/subcommand_errors.rs
expression: "strip_ansi_escapes :: strip_str(& err.to_string())"
---
Error: could not parse command-line arguments

Sources:
├─ cli --settings.*
└─ defaults

command.. Create::.. create

Run with --help for usage information.
Error: unknown flag: --help
   ╭─[ <cli>:1:8 ]
   │
 1 │ create --help
   │        ───┬──  
   │           ╰──── unknown flag: --help
───╯
